@@ -11,6 +11,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service("AdminClienteServiceImpl")
@@ -25,7 +26,7 @@ public class AdminClienteServiceImpl implements AdminClientesService, CommonClie
         return clienteRepository.findByStatusTrue(sort)
                 .stream()
                 .map(clienteDTOMapper)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
